Page/Video stutter with Bug 1946657 fix
Categories
(Core :: Graphics, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox135 | --- | unaffected |
firefox136 | --- | unaffected |
firefox137 | --- | fixed |
People
(Reporter: sotaro, Assigned: sotaro, NeedInfo)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Created from Bug 1946657 comment 10.
Assignee | ||
Updated•6 months ago
|
Assignee | ||
Comment 1•6 months ago
|
||
The fix has some workaround for the stutter, but it was not enough. Need to add more workaround.
Assignee | ||
Comment 2•6 months ago
•
|
||
But there is a lot of stutter https://uditmahajan.com/ : https://share.firefox.dev/42ZrAVn
With the STR, re-creating DCSurfaceVideo happened often. And long wait seemed to happen only during handling first present in DCSurfaceVideo::PresentVideo().
Comment 3•6 months ago
|
||
Set release status flags based on info from the regressing bug 1946657
Assignee | ||
Comment 4•6 months ago
|
||
Assignee | ||
Comment 5•6 months ago
|
||
Assignee | ||
Comment 6•6 months ago
|
||
Mayank Bansal, can you check if the patch addressed the problem for you?
Comment 7•6 months ago
|
||
I will be able to test Earliest on Tuesday morning.
Assignee | ||
Comment 8•6 months ago
|
||
(In reply to Mayank Bansal from comment #7)
I will be able to test Earliest on Tuesday morning.
OK, thank you.
Updated•6 months ago
|
Comment 10•6 months ago
|
||
bugherder |
Comment 11•6 months ago
•
|
||
This is what i get with Nightly: https://share.firefox.dev/41u3H7b
I also very quickly (after 1-2 scrolls) get this in gfx-log: GP+[GFX1-]: Video swapchain present is slow
So in summary: On the first scroll, there is a small stutter. Then i guess the "slow swapchain" mechansim kicks-in and scrolling becomes smooth.
I dont know how significant this is. Ni? you in case you have any thought.
Description
•