Bug 1949341 - Change presentDurationMs as to include first present wait duration r=gfx-reviewers,lsalzman

There was a case that re-creating DCSurfaceVideo happened often. And long wait happened only during handling first present in DCSurfaceVideo::PresentVideo().

Differential Revision: https://phabricator.services.mozilla.com/D239080